# structured-workspace

./: .gitignore  README.md  pyproject.toml
drydotai/: __init__.py  auth.py  client.py
examples/: basic_usage.py  demo.ipynb  expense_ninja.py  gmail_processor.py  issue_tracker_simple.py  requirements-slack.txt  requirements.txt  slack_reporter.py  stock_picker.py
