[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drydotai"
version = "0.2.0"
description = "Python client library for Dry.ai CRUD API - create and manage spaces with natural language"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Dry.ai Team", email = "support@dry.ai"},
]
maintainers = [
    {name = "Dry.ai Team", email = "support@dry.ai"},
]
license = {text = "MIT"}
keywords = ["dry.ai", "ai", "nlp", "crud", "api", "space", "natural-language"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://dry.ai"
Documentation = "https://github.com/drydotai/drydotai-agent-python#readme"
Repository = "https://github.com/drydotai/drydotai-agent-python"
Issues = "https://github.com/drydotai/drydotai-agent-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "python-dotenv>=0.19.0",
]
dotenv = [
    "python-dotenv>=0.19.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["drydotai*"]